--- a/index.html
+++ b/index.html
@@ -24,6 +24,7 @@
             border-radius: 30px;
             padding: 10px 20px;
             display: inline-block;
+            color: white; /* Set text color to white */
         }
 
         #seized-text {
@@ -35,7 +36,7 @@
             font-family: "Verdana", sans-serif;
             font-weight: bold;
             font-size: 4em;
-            color: #5DAEEA;
+            color: #5DAEEA; /* Keep the color for this text */
         }
 
         #join-text {
@@ -46,7 +47,7 @@
         #discord-link {
             font-family: "Monaco", sans-serif;
             font-size: 2.0em;
-            color: #5DAEEA;
+            color: #5DAEEA; /* Keep the color for this text */
             text-decoration: none;
             margin-top: 10px;
         }
